<resources>
    <string name="app_name">IMusic</string>
    <string name="playlists">Playlists</string>
    <string name="favorite">Favorite</string>
    <string name="shuffle">Shuffle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_songs">Total Songs</string>
    <string name="world_of_music">world of Music</string>
    <string name="repeat">Repeat</string>
    <string name="equalizer">Equalizer</string>
    <string name="timer">Timer</string>
    <string name="share">Share</string>
    <string name="previous">Previous</string>
    <string name="like_songs">Like Songs</string>
    <string name="loading">Loading</string>
    <string name="_00_00">00:00</string>
    <string name="song_name">Song Name</string>
    <string name="playlist">Playlist</string>
    <string name="search_your_music">Search your music</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="feedback">Feedback</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="developer">Developer</string>
    <string name="song_album">song album</string>
    <string name="welcome_to_n_imusic">Welcome to\n IMusic</string>
    <string name="imusic">IMusic</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="song_img">song Img</string>
    <string name="delete">delete</string>
    <string name="your_name">Your Name</string>
    <string name="search">Search</string>
    <string name="app_version">App Version: 1.0</string>
    <string name="developed_and_designed_by">Developed and Designed by</string>
    <string name="aman_kumar">Aman Kumar</string>
    <string name="insta_id">coder.aman</string>
    <string name="linkedin_id">aman-kumar-4aaa631b5</string>
    <string name="music_quote">Without music, life would be a mistake.</string>
    <string name="rate_us">Rate Us</string>
    <string name="instagram">Instagram</string>
    <string name="linkedin">Linkedin</string>
    <string name="topic_feedback">Topic i.e Suggestion,Error etc.</string>
    <string name="email_address">Email Address (Optional)</string>
    <string name="send_btn">Send</string>
    <string name="playbtn">playBtn</string>
</resources>