<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:background="@color/light_endColor"
    app:strokeWidth="1dp"
    android:layout_margin="8dp"
    app:strokeColor="@color/blueColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/playListSongImage"
        android:layout_width="178dp"
        android:layout_height="130dp"
        android:background="@color/light_endColor"
        android:src="@drawable/music_listener_image"
        android:contentDescription="@string/song_img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/playListName"
        android:layout_width="130dp"
        android:layout_height="match_parent"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/playlist_name"
        android:ellipsize="marquee"
        android:background="@color/light_endColor"
        android:singleLine="true"
        android:marqueeRepeatLimit="marquee_forever"/>
    
    <ImageButton
        android:id="@+id/playListDeleteBtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_delete"
        android:padding="4dp"
        android:background="@color/light_endColor"
        android:contentDescription="@string/delete" />
    </LinearLayout>
    </LinearLayout>


</com.google.android.material.card.MaterialCardView>