<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialogSeekbarStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/_00_00"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:fontFamily="@font/noto_regular"
            android:textSize="15sp"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/dialogSeekbar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:thumbTint="@color/blueColor"
            android:thumbTintMode="src_in"
            android:progressBackgroundTint="@color/white"
            android:progressTint="@android:color/holo_red_light"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/loading"
            android:id="@+id/dialogSeekbarEnd"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:fontFamily="@font/noto_regular"
            android:textSize="15sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:text="Title" />

        <ImageButton
            android:id="@+id/dialogPlayPauseBtn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/playbtn" />


    </LinearLayout>


</LinearLayout>
