<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".fragments.FavoriteFragment">

    <LinearLayout
        android:id="@+id/toolbarLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/previous"
            android:src="@drawable/ic_back"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/playlistNamePD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/noto_regular"
            android:gravity="center"
            android:text="@string/imusic"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/imageLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarLL">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/playlistImagePD"
            android:layout_width="250dp"
            android:layout_height="188dp"
            android:src="@drawable/music_splash_screen" />

        <TextView
            android:id="@+id/moreInfoPD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/splash_background"
            android:gravity="start|center"
            android:text="@string/playlist_name"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerPlaylistPD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarThumbVertical="@drawable/ic_recycler_scrollbar"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageLL" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/playlistShuffler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:icon="@drawable/ic_shuffle"
        app:iconSize="30dp"
        android:visibility="gone"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomBtnLL"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="@color/blueColor"
        app:strokeWidth="2dp" />

    <LinearLayout
        android:id="@+id/bottomBtnLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addBtnPD"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/splash_background"
            android:drawableStart="@drawable/ic_add"
            android:drawableTint="@color/white"
            android:text="Add"
            android:padding="10dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            tools:ignore="UnusedAttribute" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/removeBtnPD"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Remove"
            android:padding="10dp"
            android:background="@drawable/splash_background"
            android:drawableStart="@drawable/ic_remove"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>